--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>perf-test</title>
-	<meta name="description" content="Documentation for perf-test">
+	<title>@smikhalevski/perf-test</title>
+	<meta name="description" content="Documentation for @smikhalevski/perf-test">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
 	<script async src="assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">perf-test</a>
+					<a href="index.html" class="title">@smikhalevski/perf-test</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -50,7 +50,7 @@
 	</div>
 	<div class="tsd-page-title">
 		<div class="container">
-			<h1>perf-test</h1>
+			<h1>@smikhalevski/perf-test</h1>
 		</div>
 	</div>
 </header>
@@ -64,6 +64,7 @@
 				<p>The Node.js performance testing tool.</p>
 				<pre><code class="language-shell"><span style="color: #000000">npm install --save-dev @smikhalevski/perf-test</span>
 </code></pre>
+				<p>⚠️ <a href="https://smikhalevski.github.io/perf-test/">API documentation is available here.</a></p>
 				<a href="#usage" id="usage" style="color: inherit; text-decoration: none;">
 					<h2>Usage</h2>
 				</a>
