--- a/interfaces/IAdder.html
+++ b/interfaces/IAdder.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>IAdder | perf-test</title>
-	<meta name="description" content="Documentation for perf-test">
+	<title>IAdder | @smikhalevski/perf-test</title>
+	<meta name="description" content="Documentation for @smikhalevski/perf-test">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<script async src="../assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">perf-test</a>
+					<a href="../index.html" class="title">@smikhalevski/perf-test</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -52,7 +52,7 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../modules.html">perf-test</a>
+					<a href="../modules.html">@smikhalevski/perf-test</a>
 				</li>
 				<li>
 					<a href="IAdder.html">IAdder</a>
@@ -106,7 +106,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createAdder.ts#L16">createAdder.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createAdder.ts#L16">createAdder.ts:16</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -137,7 +137,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createAdder.ts#L9">createAdder.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createAdder.ts#L9">createAdder.ts:9</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
