--- a/interfaces/IHistogram.html
+++ b/interfaces/IHistogram.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>IHistogram | perf-test</title>
-	<meta name="description" content="Documentation for perf-test">
+	<title>IHistogram | @smikhalevski/perf-test</title>
+	<meta name="description" content="Documentation for @smikhalevski/perf-test">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<script async src="../assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">perf-test</a>
+					<a href="../index.html" class="title">@smikhalevski/perf-test</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -52,7 +52,7 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../modules.html">perf-test</a>
+					<a href="../modules.html">@smikhalevski/perf-test</a>
 				</li>
 				<li>
 					<a href="IHistogram.html">IHistogram</a>
@@ -113,7 +113,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createHistogram.ts#L73">createHistogram.ts:73</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createHistogram.ts#L73">createHistogram.ts:73</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -144,7 +144,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createHistogram.ts#L66">createHistogram.ts:66</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createHistogram.ts#L66">createHistogram.ts:66</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -166,7 +166,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createHistogram.ts#L28">createHistogram.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createHistogram.ts#L28">createHistogram.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -188,7 +188,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createHistogram.ts#L54">createHistogram.ts:54</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createHistogram.ts#L54">createHistogram.ts:54</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -210,7 +210,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createHistogram.ts#L61">createHistogram.ts:61</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createHistogram.ts#L61">createHistogram.ts:61</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -237,7 +237,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createHistogram.ts#L42">createHistogram.ts:42</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createHistogram.ts#L42">createHistogram.ts:42</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -264,7 +264,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createHistogram.ts#L49">createHistogram.ts:49</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createHistogram.ts#L49">createHistogram.ts:49</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -291,7 +291,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createHistogram.ts#L23">createHistogram.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createHistogram.ts#L23">createHistogram.ts:23</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -313,7 +313,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createHistogram.ts#L35">createHistogram.ts:35</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createHistogram.ts#L35">createHistogram.ts:35</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
