--- a/modules.html
+++ b/modules.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>perf-test</title>
-	<meta name="description" content="Documentation for perf-test">
+	<title>@smikhalevski/perf-test</title>
+	<meta name="description" content="Documentation for @smikhalevski/perf-test">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
 	<script async src="assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">perf-test</a>
+					<a href="index.html" class="title">@smikhalevski/perf-test</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -50,7 +50,7 @@
 	</div>
 	<div class="tsd-page-title">
 		<div class="container">
-			<h1>perf-test</h1>
+			<h1>@smikhalevski/perf-test</h1>
 		</div>
 	</div>
 </header>
@@ -96,7 +96,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createAdder.ts#L25">createAdder.ts:25</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createAdder.ts#L25">createAdder.ts:25</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -124,7 +124,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/createHistogram.ts#L79">createHistogram.ts:79</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/createHistogram.ts#L79">createHistogram.ts:79</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -146,7 +146,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/cycle.ts#L49">cycle.ts:49</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/cycle.ts#L49">cycle.ts:49</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -201,7 +201,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/format.ts#L3">format.ts:3</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/format.ts#L3">format.ts:3</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -224,7 +224,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/format.ts#L9">format.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/format.ts#L9">format.ts:9</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -250,7 +250,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/test-api.ts#L8">test-api.ts:8</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/test-api.ts#L8">test-api.ts:8</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -291,7 +291,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/d47d500/src/main/test-api.ts#L20">test-api.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/perf-test/blob/85130b0/src/main/test-api.ts#L20">test-api.ts:20</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
